--- a/webinar2.ipynb
+++ b/webinar2.ipynb
@@ -1,9 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f63b627a",
+   "metadata": {
+    "cellId": "dpg05ygbexsb70c1mrexgv",
+    "execution_id": "0fc1a407-709e-4528-8e48-f980ac7c2ab5"
+   },
+   "source": [
+    "## В качестве датасета использовал капчу одного сервиса, уже предобработанную и нарезанную на цифры"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4649eb00",
+   "id": "1a71d5e7",
    "metadata": {
     "cellId": "go6zn53wfcfnc4l7f4pjr"
    },
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6e4504",
+   "id": "cf2f89e6",
    "metadata": {
     "cellId": "xb12pizjemd0bemvxlwexr7",
     "execution_id": "6aa304e5-d29e-4b87-9630-642d25169527"
@@ -42,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "03578d1e",
+   "id": "7e229fe0",
    "metadata": {
     "cellId": "mprdwr5mf1b99tjjcsg3r"
    },
@@ -74,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b0a00f0d",
+   "id": "d703cd62",
    "metadata": {
     "cellId": "hfapv0hek7nqcgrioouy4"
    },
@@ -93,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1174d51d",
+   "id": "fcd6996d",
    "metadata": {
     "cellId": "73f3qd5zue61y24s08hofh"
    },
@@ -115,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b1c0a55b",
+   "id": "258f03e2",
    "metadata": {
     "cellId": "e1iqwglu3yjuaqp4o343dj"
    },
@@ -140,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "bace3307",
+   "id": "1c6cc436",
    "metadata": {
     "cellId": "onhinapkwln9h7ph8e5g9"
    },
@@ -153,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "55bec61f",
+   "id": "a971b166",
    "metadata": {
     "cellId": "0ukqhj4ainwnxl6rtukrtks"
    },
@@ -192,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d3515e67",
+   "id": "332f8883",
    "metadata": {
     "cellId": "mioqhdeai6vavbug8gsf"
    },
@@ -236,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e3ef81ae",
+   "id": "bf28d7fd",
    "metadata": {
     "cellId": "jak0c1r1utljop69xmo26"
    },
